# ds_compe

./: .gitignore  README.md  common.py  pyproject.toml
classification/: evaluation_via_pycaret.py
data/: filelist.md
docs/: build_model_idea.md  logging.md  preprocess_idea.md
regression/: evaluation.py  prediction.py  preprocess.py
